--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,7 @@
                     android:src="@drawable/image1" />
 
                 <ImageView
+                    android:id="@+id/imageView2"
                     android:layout_width="@dimen/_45sdp"
                     android:layout_height="@dimen/_45sdp"
                     android:layout_marginLeft="20dp"
