--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,8 @@
     <style name="chat_message"><item name="android:textColor">@color/white</item></style>
     <style name="fab_bg"><item name="android:backgroundTint">@color/white</item></style>
     <style name="card_bg"><item name="android:backgroundTint">@color/secondary__color</item></style>
+    <style name="StoryDialogAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 </resources>
