--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/primary__color"
     tools:context=".ChatFragment">
-    <Button
-        android:id="@+id/groupChat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Group chat"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,53 +29,75 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-16dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/conversationsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:overScrollMode="never"
-            android:padding="@dimen/_20sdp"
-            android:visibility="gone"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-        <LinearLayout
-            android:id="@+id/noMessages"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/heading_text"
-                style="@style/text__color"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp"
-                android:fontFamily="@font/nunito_bold"
-                android:text="Lets Start Messaging"
-                android:textSize="@dimen/_20sdp"
-                android:textStyle="bold" />
-
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/header_lottie"
+            android:background="@drawable/background_content_bottom"
+            >
+            <com.google.android.material.tabs.TabItem
                 android:layout_width="match_parent"
-                android:layout_height="218dp"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/animation_1706636230240" />
+                android:layout_height="wrap_content"
+                android:text="Single Chat"/>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Group Chat"/>
+        </com.google.android.material.tabs.TabLayout>
+        
+        <androidx.viewpager2.widget.ViewPager2
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            android:id="@+id/view_pager"/>
 
-        </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_gravity="center" />
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/conversationsRecyclerView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:clipToPadding="false"-->
+<!--            android:orientation="vertical"-->
+<!--            android:overScrollMode="never"-->
+<!--            android:padding="@dimen/_20sdp"-->
+<!--            android:visibility="gone"-->
+<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/noMessages"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:orientation="vertical"-->
+<!--            android:visibility="gone">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/heading_text"-->
+<!--                style="@style/text__color"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_horizontal"-->
+<!--                android:layout_marginTop="40dp"-->
+<!--                android:fontFamily="@font/nunito_bold"-->
+<!--                android:text="Lets Start Messaging"-->
+<!--                android:textSize="@dimen/_20sdp"-->
+<!--                android:textStyle="bold" />-->
+
+<!--            <com.airbnb.lottie.LottieAnimationView-->
+<!--                android:id="@+id/header_lottie"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="218dp"-->
+<!--                app:lottie_autoPlay="true"-->
+<!--                app:lottie_loop="true"-->
+<!--                app:lottie_rawRes="@raw/animation_1706636230240" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progressBar"-->
+<!--            android:layout_width="@dimen/_25sdp"-->
+<!--            android:layout_height="@dimen/_25sdp"-->
+<!--            android:layout_gravity="center" />-->
     </FrameLayout>
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
